kubernetes/main/apps/self-hosted/kanboard/app/deployment.yaml
---
# As per this page
# https://geek-cookbook.funkypenguin.co.nz/recipes/kubernetes/kanboard/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanboard
  labels:
    app: kanboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanboard
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      securityContext:
        runAsUser:  0
        runAsGroup: 0
      containers:
      - name: kanboard
        image: kanboard/kanboard:v1.2.42
        volumeMounts:
          - mountPath: /var/www/app/config.php
            name: kanboard-conf
            subPath: config.php
          - mountPath: /var/www/app/data
            name: kanboard-data
            subPath: data
          - mountPath: /var/www/app/plugins
            name: kanboard-data
            subPath: plugins
      volumes:
        - name: kanboard-conf
          configMap:
            name: kanboard-config
        - name: kanboard-data
          persistentVolumeClaim:
            claimName: kanboard-longhorn-pvc
