kubernetes/main/apps/self-hosted/kanboard/app/temp.yaml
---
# As per this page
# https://geek-cookbook.funkypenguin.co.nz/recipes/kubernetes/kanboard/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanboard
  labels:
    app: kanboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanboard
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      securityContext:
        runAsUser:  0
        runAsGroup: 0
      containers:
      - name: temp
        image: ubuntu:latest
        command:
          - "bash"
        args:
          - "-c"
          - "sleep 3600"
        volumeMounts:
          - mountPath: /var/www/app
            name: kanboard-data
          - mountPath: /var/www/app-longhorn
            name: kanboard-data-longhorn
      volumes:
        - name: kanboard-data
          persistentVolumeClaim:
            claimName: kanboard-pvc
        - name: kanboard-data-longhorn
          persistentVolumeClaim:
            claimName: kanboard-longhorn-pvc
