kubernetes/main/apps/self-hosted/kanboard/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kanboard
spec:
  selector:
    app: kanboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
